stop using google's immutable data structures in favor of Java's new ones